# flipsol-app-specific-2930

./: .env.example  .env.production.example  .gitignore  AUDIT.md  Anchor.toml  BUILD_FIX.md  CLAUDE.md  COMPLETE_TEST_GUIDE.md  CONVEX_DEPLOYMENT.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUMMARY.md  END_TO_END_FLOW.md  HOW_TO_START_ROUND.md  PRODUCTION_DEPLOYMENT.md  QUICK_CONVEX_SETUP.md  QUICK_DEPLOY.md  QUICK_FIX.md  RAILWAY_DEPLOYMENT.md  README.md  RPC_PROVIDERS.md  START_ROUND_GUIDE.md  TESTING_GUIDE.md  UI_UX_IMPROVEMENTS.md  VERCEL_DEPLOYMENT.md  WALKTHROUGH.md  authority-keypair.json  cypress.config.js  index.html  package-lock.json  package.json  playwright.config.ts  setup-vercel-env.sh  tailwind.config.js  test-casino.html  vercel.json  vite.config.js  vitest.config.js
backend/: .env.example  debug-accounts.js  fix-jackpot.js  immediate-workaround.js  package-lock.json  package.json  quick-fix-jackpot.js  railway.json  simple-solution.js  tsconfig.json  ultimate-fix.js  working-solution.js
backend/idl/: flipsol.ts
backend/prisma/: schema.prisma
convex/: gameData.ts  referrals.ts  schema.ts  tsconfig.json
programs/flipsol/: Cargo.toml  flipsol-v2-keypair.json
programs/flipsol/src/: lib.rs
scripts/: check-round-state.cjs  check-state.cjs  claim-winnings.cjs  create-new-round.cjs  deploy.sh  disable-round-31.js  initialize.ts  manual-close-round.cjs  manual-settlement.js  place-bet.cjs  test-convex-data.js  test-discriminators.cjs  test-end-to-end.js  test-winner-flow.sh
src/: App.jsx  index.css  main.jsx  polyfills.js  polyfills.ts
(+77 files in other folders)
