[package]
name = "flipsol"
version = "0.1.0"
description = "Solana coin flip game with jackpot"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "flipsol"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]
anchor-debug = []

[dependencies]
anchor-lang = { version = "0.29.0", features = ["idl-build"] }
anchor-spl = { version = "0.29.0", features = ["idl-build"] }
